[package]
name = "incremental-game-test"
version = "0.1.0"
authors = ["petermares"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.14"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
